Minor fixes - IE11 scrollbars, mobile selected frame styels

--- a/src/styles/common/modals.scss
+++ b/src/styles/common/modals.scss
@@ -77,7 +77,7 @@
   }
 
   .modal-body {
-    overflow: scroll;
+    // overflow: scroll;
     height: calc(100% - 45px);
   }
 
@@ -146,7 +146,7 @@
     }
 
     .modal-body {
-      overflow: scroll;
+      // overflow: scroll;
       height: auto;
       width: 400px;
       margin-left: auto;
