--- a/src/styles/topbar/SelectedFrame.scss
+++ b/src/styles/topbar/SelectedFrame.scss
@@ -35,11 +35,12 @@
     cursor: pointer;
   }
   &__status {
-    font-size: 13px;
+    font-size: 11px;
     font-style: italic;
     color: #999;
     font-weight: 300;
     letter-spacing: 0px;
+    line-height: 1em;
   }
   .selected-frame-indicator {
     position: relative;
@@ -63,11 +64,12 @@
       width: 40px;
     }
     &__status {
-    font-size: 14px;
-    font-style: italic;
-    color: #999;
-    font-weight: 300;
-  }
+      font-size: 14px;
+      font-style: italic;
+      color: #999;
+      font-weight: 300;
+      margin-top: 4px;
+    }
     .selected-frame-indicator {}
   }
 }
